fix: infinity loop